# clionbugs

./: README.md
eigen_block/: CMakeLists.txt  MyClass.cpp  MyClass.h  eigen_operator.cpp  main.cpp  tests.cpp
